--- a/src/App.css
+++ b/src/App.css
@@ -238,7 +238,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
-  background-image: url('./assets/img/banner-bg.png');
+  background-image: url('./assets/img/ny.jpg');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -247,7 +247,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   letter-spacing: 0.8px;
   padding: 8px 10px;
-  background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
+  background: linear-gradient(90.21deg, rgba(15, 1, 17, 0.749) -5.91%, rgba(93, 74, 176, 0.5) 111.58%);
   border: 1px solid rgba(255, 255, 255, 0.5);
   font-size: 20px;
   margin-bottom: 16px;
@@ -292,12 +292,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 @keyframes updown {
     0% {
         transform: translateY(-20px);
+        transform: translateX(-20px);
     }
     50% {
         transform: translateY(20px);
     }
     100% {
         transform: translateY(-20px);
+        transform: translateX(-20px);
     }
 }
 .txt-rotate > .wrap {
